--- a/_posts/2018-12-05-cupdice.markdown
+++ b/_posts/2018-12-05-cupdice.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Dice Stacking: A Dynamic Manipulation Task"
 date:   2025-04-05 21:21:53 +00:00
-image: /images/austism.png
+image: /images/autism.png
 categories: CMU
 course: "Multivariate data analysis"
 author: "Amy Mann"
