--- a/_posts/2022-08-21-seaice.markdown
+++ b/_posts/2022-08-21-seaice.markdown
@@ -6,7 +6,8 @@ image: /images/sea-ice.gif
 categories: research
 author: "Amy Mann"
 authors: "<strong>Amy Mann</strong>, Kent Moore"
+venue: "Laidlaw Research Conference"
 poster: /pdfs/sea-ice-poster.pdf
 code: https://github.com/am-mann/sea-ice
 ---
-I wrote code to calculate back trajectories and forward trajectories of sea ice in the Last Ice Area using satellite velocity data with a particular interest in understanding the cause of the anomolous sea ice reversal in February 2018. I received funding from the Laidlaw Research Fellowship. In process of turning into paper. 
+Simulated back trajectories and forward trajectories of sea ice in the Last Ice Area using satellite velocity data with a particular interest in understanding the cause of the anomolous sea ice reversal in February 2018. I received funding from the Laidlaw Research Fellowship. In process of turning into paper. 
