--- a/_posts/2025-04-01-malaria.markdown
+++ b/_posts/2025-04-01-malaria.markdown
@@ -2,11 +2,11 @@
 layout: post
 title:  "Temperature dependent model of malaria transmission"
 date:   2025-05-29 22:21:59 +00:00
-image: /images/crv19.png
+image: /images/malaria.png
 categories: research
 code: https://github.com/am-mann/malaria-temp
 author: "Amy Mann"
 authors: "<strong>Amy Mann</strong>, Qing Han, Sarafa, Jude Kong"
 ---
 
-Temperature dependent modelling of malaria transmission
+Created a temperature dependent model of malaria transmission
